--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@ pywikibot/families/
 build
 dist
 docs/_build/
-/scripts/userscripts/*
-!/scripts/userscripts/__init__.py
+#/scripts/userscripts/*
+#!/scripts/userscripts/__init__.py
 .vscode/
